fixed styling and alignment of components

--- a/src/components/DigitCard/digitcard.css
+++ b/src/components/DigitCard/digitcard.css
@@ -15,6 +15,7 @@
   border-radius: 5px;
   width: 250px;
   height: 250px;
+  margin-bottom: 25px;
 }
 
 .font-styles {
